---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 03.11.2024
  Changes:
    - Suppression d'une ligne inutile dans RitnCoreForce.delete().
    - RitnCoreSurface.delete() devient une fonction et plus une methode de la classe.
  Fixes:
    - Suppression des données surfaces dans [storage.core.surfaces] est maintenant fonctionnelle !
    - Utilisation de (LuaPrototypes) [prototypes.items] dans : seablock.lua (compatibilité avec Sea Block).
    - Les forces "joueurs" ne sont désormais plus alliés.
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 12.10.2024
  Changes:
    - Passage en 2.0.
    - Variable "global" -> "storage".
  Fixes:
    - core.lualib.event_handler : on_init, on_configuration_changed passe dans le module désormais.
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 14.09.2024
  Changes:
    - Changement mineurs.
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 10.08.2024
  Adds:
    - Suppression des technologies dans la force par défaut (force~default).
    - Ajout de methode : 
        - RitnCoreForce:deleteInventory(LuaPlayer)
        - RitnCorePlayer:isForceDefault()
        - RitnCorePlayer:isLobby()
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 03.08.2024
  Adds:
    - Ajout de methode : RitnCorePlayer:clearCursor()
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 26.06.2024
  Changes:
    - Suppression de log debug dans RitnEvent.
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 26.06.2024
  Changes:
    - Migration vers RitnLib 0.8.2